deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-website
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-apache-ubi8
  template:
    metadata:
      labels:
        app: my-apache-ubi8
    spec:
      containers:
      - name: my-apache-ubi8
        image: quay.io/marzquay/my-apache-ubi8:$TAG
        ports:
        - containerPort: 8080
