service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-apache-ubi8
spec:
  selector:
    app: my-apache-ubi8
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
